Fixed too much padding on comments mobile fixes #91

--- a/euth_wagtail/static/scss/components/_comments.scss
+++ b/euth_wagtail/static/scss/components/_comments.scss
@@ -49,6 +49,10 @@
             margin: 0px 40px 0px 40px;
         }
     }
+
+    @media (max-width: $screen-sm-min) {
+        margin: 0;
+    }
 }
 .comment {
     & .icon::before {
